adicionando favicon ao site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       name="keywords"
       content="treinamentos, segurança do trabalho, consultoria ocupacional, NR-35, trabalho em altura, espaço confinado"
     />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="src/img/prosseguir-logo.png" />
+    <link rel="shortcut icon" type="image/png" href="src/img/prosseguir-logo.png" />
+    <link rel="apple-touch-icon" href="src/img/prosseguir-logo.png" />
+    
     <link rel="stylesheet" href="src/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
