--- a/index.html
+++ b/index.html
@@ -2,37 +2,26 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Prosseguir Treinamentos e Consultoria Ocupacional</title>
     <meta name="description" content="Especialistas em treinamentos de segurança do trabalho e consultoria ocupacional. NR-35, trabalho em altura, espaço confinado e muito mais."/>
-    <meta
-      name="keywords"
-      content="treinamentos, segurança do trabalho, consultoria ocupacional, NR-35, trabalho em altura, espaço confinado"
-    />
+    <meta name="keywords" content="treinamentos, segurança do trabalho, consultoria ocupacional, NR-35, trabalho em altura, espaço confinado">
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="src/img/prosseguir-logo.png" />
-    <link rel="shortcut icon" type="image/png" href="src/img/prosseguir-logo.png" />
-    <link rel="apple-touch-icon" href="src/img/prosseguir-logo.png" />
-    
-    <link rel="stylesheet" href="src/css/styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="icon" type="image/png" href="src/img/prosseguir-logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="src/img/prosseguir-logo.png"/>
+    <link rel="apple-touch-icon" href="src/img/prosseguir-logo.png"/>   
+    <link rel="stylesheet" href="src/css/styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <!-- Header Fixo -->
+
     <header class="header" id="header">
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <img
-              src="src/img/prosseguir-logo.png"
-              alt="Prosseguir SST - Treinamentos e Consultoria Ocupacional"
-            />
+            <img src="src/img/prosseguir-logo.png" alt="Prosseguir SST - Treinamentos e Consultoria Ocupacional"/>
           </div>
 
           <nav class="nav" id="nav">
@@ -47,12 +36,7 @@
           </nav>
 
           <div class="header-actions">
-            <a
-              href="https://instagram.com/prosseguirsst"
-              target="_blank"
-              class="instagram-link"
-              aria-label="Instagram Prosseguir SST"
-            >
+            <a href="https://instagram.com/prosseguirsst" target="_blank" class="instagram-link" aria-label="Instagram Prosseguir SST">
               <svg
                 width="24"
                 height="24"
